<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    tools:context=".Activity.sign_in">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:src="@drawable/fixlogo" />

    <!--<EditText-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:id="@+id/input_email"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:layout_marginRight="30dp"-->
        <!--android:layout_marginBottom="5dp"-->
        <!--android:background="@drawable/edittextbackground"-->
        <!--android:hint="Email"-->
        <!--android:textAlignment="center"-->
        <!--/>-->

    <!--<EditText-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:id="@+id/input_password"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:layout_marginRight="30dp"-->
        <!--android:layout_marginBottom="5dp"-->
        <!--android:background="@drawable/edittextbackground"-->
        <!--android:hint="Password"-->
        <!--android:textAlignment="center"-->
        <!--/>-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="@drawable/edittextbackground"
            android:textAlignment="center"
        >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/email_hint"
                android:padding="5dp"
                android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center"
        android:background="@drawable/edittextbackground"
        android:textAlignment="center"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/visible"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:padding="5dp"
            android:password="true"
            android:singleLine="true" />
   </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_log"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="5dp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotpass"
            android:text="@string/forgot_pass"
            android:textSize="12dp"
            android:gravity="left"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup"
            android:text="@string/dont_have_account"
            android:textSize="12dp"
            android:gravity="right"
            android:layout_weight="1"
            />
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="0.5">-->

        <!--<com.google.android.material.textfield.TextInputLayout-->
            <!--android:id="@+id/input_layout_email"-->
            <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="30dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:layout_marginRight="30dp"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--app:errorEnabled="true"-->
            <!--android:hint="@string/email_hint">-->

            <!--<com.google.android.material.textfield.TextInputEditText-->
                <!--android:id="@+id/input_email"-->
                <!--style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->
        <!--</com.google.android.material.textfield.TextInputLayout>-->
    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="0.5">-->

        <!--<com.google.android.material.textfield.TextInputLayout-->
            <!--android:id="@+id/input_layout_password"-->
            <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="30dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:layout_marginRight="30dp"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:hint="@string/password_hint">-->
            <!--<com.google.android.material.textfield.TextInputEditText-->
                <!--android:id="@+id/input_password"-->
                <!--style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="textPassword" />-->
        <!--</com.google.android.material.textfield.TextInputLayout>-->
    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="2"-->
        <!--android:orientation="vertical"-->
        <!--android:padding="20dp">-->

        <!--<com.google.android.material.button.MaterialButton-->
            <!--android:id="@+id/btn_log"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="10dp"-->
            <!--android:text="@string/sign_in"-->
            <!--android:textColor="@color/colorPrimary"-->
            <!--android:background="@drawable/button"-->
            <!--android:backgroundTint="@color/colorPrimaryDark"-->
            <!--/>-->
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="OR"-->
            <!--style="@style/TextAppearance.MaterialComponents.Button"-->
            <!--android:textAlignment="center"-->
            <!--/>-->
        <!--<com.google.android.material.button.MaterialButton-->
            <!--android:id="@+id/btn_reg"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="10dp"-->
            <!--android:text="@string/sign_up"-->
            <!--app:backgroundTint="@color/colorAccent" />-->
    <!--</LinearLayout>-->


</LinearLayout>